--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo string
-      - run: echo "Hello" 
+        run: echo "Hello" 
       - name: Multi line string
-      - run: |
+        run: |
           pwd
           node -v
           ls -a   
