--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -9,7 +9,12 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v1
-      
+      - name: Set Terraform  
+        uses: hasicorp/setup-terraform@v2
+        with: 
+          terraform_version: 1.1.9
+      - name: Terraform init
+        run: terraform init 
       - name: Multi line string
         run: |
           pwd
