--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -4,7 +4,7 @@ on:
   - push
 
 jobs:
-  terraform-workflow:
+  run-shell-commands:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -15,7 +15,7 @@ jobs:
           terraform_version: 1.1.9
       - name: Terraform init
         run: terraform init 
-      - name: Terraform validate
-        run: terraform validate  
-      - name: Terraform plan
-        run: terraform plan 
+      - name: Multi line string
+        run: |
+          pwd
+          ls -a 
