--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -4,7 +4,7 @@ on:
   - push
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS-SECRETS_ACCESS_KEY }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS-SECRET_ACCESS_KEY }}
 
 jobs:
   terraform-workflow:
